Esto e sun avance de la tarea

--- a/TareaPractica1_plantillaTareasPracticas.ipynb
+++ b/TareaPractica1_plantillaTareasPracticas.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "### Programación básica para la física\n",
-    "\n",
+    "### Alumno: Rivas Rodriguez Luis Enrique\n",
     "---"
    ]
   },
@@ -55,25 +55,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Para que un satélite se mantenga en un órbita circular debemos considerar que las fuerzas centrípeta debe ser igual a la fuerza gravitacional que lo mantiene cerca del planeta entonces tenemos que\n",
+    "$F_c=F_g$\n",
+    "\n",
+    "\n",
+    "Entonces usando la fórmula gravitacional de Newton donde\n",
+    "$F_g= \\frac{G \\cdot m_1 \\cdot m_2}{r^2} $\n",
+    "y la de la fuerza centrípeta $\\frac{mv^2}{r}$ por lo tanto obtenemos las siguientes igualdad\n",
+    "\n",
+    "$F_g= \\frac{G \\cdot M \\cdot m}{r^2} = \\frac{mv^2}{r}$\n",
+    "\n",
+    "Para le caso de un satélite que orbita fuera de la tierra debemos tomar en cuenta a r como $r=R+h$ con R el radio del planeta y h la altura que alcanza el satélite, además consideremos que $v=\\frac{d}{T}$ donde d es la distancia por vuelta completa al planeta, considerando un movimiento circular podemos expresar $v=\\frac{2\\pi (R+h)}{T}$ entonces podemos sustituir esta expresión y despejar de la siguiente manera\n",
+    "\n",
+    "\n",
+    " $\\frac{GM}{(R+h)^2}=\\frac{mv^2}{R+h}$ $\\implies$ $\\frac{GM}{R+h}=v^2=\\left(\\frac{2\\pi (R+h)}{T}\\right)^2=\\frac{4\\pi^2(R+h)^2}{T^2}\\implies GMT^2=4\\pi^2 (R+h)^3\\implies (R+h)^3=\\frac{GMT^2}{4\\pi^2}\\implies R+h=\\left(\\frac{GMT^2}{4\\pi^2}\\right)^{\\frac{1}{3}}\\implies h=\\left(\\frac{GMT^2}{4\\pi^2}\\right)^{\\frac{1}{3}}-R$\n",
+    " \n",
+    " Obteniendo así la expresión esperada.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,24 +85,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import math as mt\n",
+    "import pandas as pd\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa el tiempo T en segundo que le toma al satélite para orbitar el planeta: 86400\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usando la fórmula de la altitud de un satélite se puede determinar dicha altitud con el valor dado\n",
+      "Dado el tiempo T proporcionado la altitud del satélite será 35855910.18 metros\n"
+     ]
+    }
+   ],
+   "source": [
+    "T=int(input(\"Ingresa el tiempo T en segundo que le toma al satélite para orbitar el planeta:\"))\n",
+    "print(\"Usando la fórmula de la altitud de un satélite se puede determinar dicha altitud con el valor dado\")\n",
+    "G=6.67e-11\n",
+    "M=5.97e24\n",
+    "R=6.371e6\n",
+    "h=((G*M*T**2)/(4 *mt.pi**2))**(1/3)-R\n",
+    "redondeo=round(h,2)\n",
+    "print(\"Dado el tiempo T proporcionado la altitud del satélite será\", redondeo, \"metros\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
