Esto es un avance de la tarea

--- a/TareaPractica1_plantillaTareasPracticas.ipynb
+++ b/TareaPractica1_plantillaTareasPracticas.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ingresa el tiempo T en segundo que le toma al satélite para orbitar el planeta: 86400\n"
+      "Ingresa el tiempo T en segundo que le toma al satélite para orbitar el planeta: 1000000\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "Usando la fórmula de la altitud de un satélite se puede determinar dicha altitud con el valor dado\n",
-      "Dado el tiempo T proporcionado la altitud del satélite será 35855910.18 metros\n"
+      "Dado el tiempo T proporcionado la altitud del satélite será 209691871.08 metros\n"
      ]
     }
    ],
@@ -136,24 +136,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dado el tiempo T proporcionado la altitud del satélite será 279321.63 metros\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tm=90\n",
+    "ts=Tm*60\n",
+    "G=6.67e-11\n",
+    "M=5.97e24\n",
+    "R=6.371e6\n",
+    "h=((G*M*ts**2)/(4 *mt.pi**2))**(1/3)-R\n",
+    "redondeo=round(h,2)\n",
+    "print(\"Dado el tiempo T proporcionado la altitud del satélite será\", redondeo, \"metros\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dado el tiempo T proporcionado la altitud del satélite será -2181559.9 metros\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tm=45\n",
+    "ts=Tm*60\n",
+    "G=6.67e-11\n",
+    "M=5.97e24\n",
+    "R=6.371e6\n",
+    "h=((G*M*ts**2)/(4 *mt.pi**2))**(1/3)-R\n",
+    "redondeo=round(h,2)\n",
+    "print(\"Dado el tiempo T proporcionado la altitud del satélite será\", redondeo, \"metros\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Como se observa en los resultados a una cierta cantidad de tiempo los resultados se vuelven negativos indicando que existe un mínimo de tiempo de órbita que está estrechamente relacionado con la altitud de dichos satélites, que al bajar de éste mínimo da resultados irreales o que indican que es físicamente imposible mantener un satélite en órbita, entonces, podemos concluir que los valores del tiempo de órbita y altitud son dependientes entre sí."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,20 +201,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -189,10 +209,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa la distancia a recorrer en años luz: 95\n",
+      "Ingresa la velocidad expresada como una fracción de la velopcidad de la luz (c) 0.74\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a) Para un observador en la tierra la nave llega en 128.38 años\n",
+      "b) Mientras para la nave el viaje será de 86.35 años\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math as mt\n",
+    "c=3e8\n",
+    "x=float(input(\"Ingresa la distancia a recorrer en años luz:\"))\n",
+    "v=float(input(\"Ingresa la velocidad expresada como una fracción de la velopcidad de la luz (c)\"))\n",
+    "t_tierra=x/v\n",
+    "redondeot=round(t_tierra,2)\n",
+    "print(\"a) Para un observador en la tierra la nave llega en\", redondeot, \"años\")\n",
+    "gamma=1/mt.sqrt(1-v**2)\n",
+    "t_nave=redondeot/gamma\n",
+    "redondeon=round(t_nave,2)\n",
+    "print(\"b) Mientras para la nave el viaje será de\",redondeon,\"años\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -210,24 +260,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa la distancia a recorrer en años luz: 10\n",
+      "Ingresa la velocidad expresada como una fracción de la velopcidad de la luz (c) 0.99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para un observador en la tierra la nave llega en 10.1 años\n",
+      "Mientras para la nave el viaje será de 1.42 años\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math as mt\n",
+    "c=3e8\n",
+    "x=float(input(\"Ingresa la distancia a recorrer en años luz:\"))\n",
+    "v=float(input(\"Ingresa la velocidad expresada como una fracción de la velopcidad de la luz (c)\"))\n",
+    "t_tierra=x/v\n",
+    "redondeot=round(t_tierra,2)\n",
+    "print(\"Para un observador en la tierra la nave llega en\", redondeot, \"años\")\n",
+    "gamma=1/mt.sqrt(1-v**2)\n",
+    "t_nave=redondeot/gamma\n",
+    "redondeon=round(t_nave,2)\n",
+    "print(\"Mientras para la nave el viaje será de\",redondeon,\"años\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,24 +352,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el valor de la velocidad en el perihelio v1 30290\n",
+      "Ingrese el valor de la distancia en le perihelio l1 1.471e11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor de la velocidad en el afelio = 29297.965326790112\n",
+      "La distancia en su afelio l2 = 152080833952.17\n",
+      "El periodo orbital T = 31551155.87\n",
+      "O bien es T = 365.18 días\n",
+      "La excentricidad e = 0.01665\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as mt\n",
+    "v1=float(input(\"Ingrese el valor de la velocidad en el perihelio v1\"))\n",
+    "l1=float(input(\"Ingrese el valor de la distancia en le perihelio l1\"))\n",
+    "G = 6.6743e-11\n",
+    "M = 1.989e30  \n",
+    "A = 1\n",
+    "B = - (2 * G * M) / (v1 * l1)\n",
+    "C = - (v1**2 - (2 * G * M / l1))\n",
+    "discriminante = B**2 - 4 * A * C\n",
+    "if discriminante < 0:\n",
+    "    print(\"El discriminante es negativo, el cálculo es inválido\")\n",
+    "else:\n",
+    "    v2 = (-B - mt.sqrt(discriminante)) / (2 * A)\n",
+    "print(\"El valor de la velocidad en el afelio =\", v2)\n",
+    "l2=(l1*v1)/v2\n",
+    "a=(1/2)*(l1+l2)\n",
+    "b=mt.sqrt(l1*l2)\n",
+    "if b<0:\n",
+    "    print(\"La expresión es negativa, la raíz es inválida\")\n",
+    "else:\n",
+    "    T=(2*mt.pi*a*b)/(l1*v1)\n",
+    "e=(l2-l1)/(l2+l1)\n",
+    "print(f\"La distancia en su afelio l2 = {l2:.2f}\")\n",
+    "print(f\"El periodo orbital T = {T:.2f}\")\n",
+    "T_dias = T / (60*60*24)\n",
+    "print(f\"O bien es T = {T_dias:.2f} días\")\n",
+    "print(f\"La excentricidad e = {e:.5f}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,24 +414,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor de la velocidad en el afelio = 29306.87\n",
+      "La distancia en su afelio l2 = 152019579575.61\n",
+      "El periodo orbital T = 31541466.67\n",
+      "O bien es T = 365.06 días\n",
+      "La excentricidad e = 0.01645\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Para la tierra\n",
+    "import math as mt\n",
+    "v1=3.0287e4\n",
+    "l1=1.4710e11\n",
+    "G = 6.6743e-11\n",
+    "M = 1.989e30  \n",
+    "A = 1\n",
+    "B = - (2 * G * M) / (v1 * l1)\n",
+    "C = - (v1**2 - (2 * G * M / l1))\n",
+    "discriminante = B**2 - 4 * A * C\n",
+    "if discriminante < 0:\n",
+    "    print(\"El discriminante es negativo, el cálculo es inválido\")\n",
+    "else:\n",
+    "    v2 = (-B - mt.sqrt(discriminante)) / (2 * A)\n",
+    "print(f\"El valor de la velocidad en el afelio = {v2:.2f}\")\n",
+    "l2=(l1*v1)/v2\n",
+    "a=(1/2)*(l1+l2)\n",
+    "b=mt.sqrt(l1*l2)\n",
+    "if b<0:\n",
+    "    print(\"La expresión es negativa, la raíz es inválida\")\n",
+    "else:\n",
+    "    T=(2*mt.pi*a*b)/(l1*v1)\n",
+    "e=(l2-l1)/(l2+l1)\n",
+    "print(f\"La distancia en su afelio l2 = {l2:.2f}\")\n",
+    "print(f\"El periodo orbital T = {T:.2f}\")\n",
+    "T_dias = T / (60*60*24)\n",
+    "print(f\"O bien es T = {T_dias:.2f} días\")\n",
+    "print(f\"La excentricidad e = {e:.5f}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor de la velocidad en el afelio = 908.05\n",
+      "La distancia en su afelio l2 = 5274268185967.95\n",
+      "El periodo orbital T = 2393959311.21\n",
+      "O bien es T = 27707.86 días\n",
+      "La excentricidad e = 0.96724\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Para el cometa\n",
+    "import math as mt\n",
+    "v1=5.4529e4\n",
+    "l1=8.7830e10\n",
+    "G = 6.6743e-11\n",
+    "M = 1.989e30  \n",
+    "A = 1\n",
+    "B = - (2 * G * M) / (v1 * l1)\n",
+    "C = - (v1**2 - (2 * G * M / l1))\n",
+    "discriminante = B**2 - 4 * A * C\n",
+    "if discriminante < 0:\n",
+    "    print(\"El discriminante es negativo, el cálculo es inválido\")\n",
+    "else:\n",
+    "    v2 = (-B - mt.sqrt(discriminante)) / (2 * A)\n",
+    "print(f\"El valor de la velocidad en el afelio = {v2:.2f}\")\n",
+    "l2=(l1*v1)/v2\n",
+    "a=(1/2)*(l1+l2)\n",
+    "b=mt.sqrt(l1*l2)\n",
+    "if b<0:\n",
+    "    print(\"La expresión es negativa, la raíz es inválida\")\n",
+    "else:\n",
+    "    T=(2*mt.pi*a*b)/(l1*v1)\n",
+    "e=(l2-l1)/(l2+l1)\n",
+    "print(f\"La distancia en su afelio l2 = {l2:.2f}\")\n",
+    "print(f\"El periodo orbital T = {T:.2f}\")\n",
+    "T_dias = T / (60*60*24)\n",
+    "print(f\"O bien es T = {T_dias:.2f} días\")\n",
+    "print(f\"La excentricidad e = {e:.5f}\")\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **4.La fórmula semiempírica de la masa (FSM)**: En física nuclear, la fórmula de Weizsäcker (conocida tambien como fórmula semiempírica) sirve para evaluar la masa y otras propiedades de un nucleo atómico; y está basada parcialmente en mediciones empíricas."
+   ]
   }
  ],
  "metadata": {
