Esto es un avance de la tarea

--- a/TareaPractica1_plantillaTareasPracticas.ipynb
+++ b/TareaPractica1_plantillaTareasPracticas.ipynb
@@ -512,7 +512,335 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.La fórmula semiempírica de la masa (FSM)**: En física nuclear, la fórmula de Weizsäcker (conocida tambien como fórmula semiempírica) sirve para evaluar la masa y otras propiedades de un nucleo atómico; y está basada parcialmente en mediciones empíricas."
+    "### **4.La fórmula semiempírica de la masa (FSM)**: En física nuclear, la fórmula de Weizsäcker (conocida tambien como fórmula semiempírica) sirve para evaluar la masa y otras propiedades de un nucleo atómico; y está basada parcialmente en mediciones empíricas.\n",
+    "\n",
+    "### En particular la fórmula se usa para calcular la energía de enlace nuclear aproximada  B, de un nucleo atómico con número atómico Z y número de masa A:\n",
+    "\n",
+    "$B = a_1 A - a_2 A^{2/3} - a_3 \\frac{Z^2}{A^{1/3}} - a_4 \\frac{(A - 2Z)^2}{A} + \\frac{a_5}{A^{1/2}}$\n",
+    "\n",
+    "donde, en unidades de millones de electrón-volts:\n",
+    "\n",
+    "\n",
+    "\n",
+    "$a_1 = 15.8, \\quad a_2 = 18.3, \\quad a_3 = 0.714, \\quad a_4 = 23.2,$\n",
+    "\n",
+    "\n",
+    "\n",
+    "y\n",
+    "\n",
+    "\n",
+    "\n",
+    "$a_5 =  \\begin{cases} \n",
+    "0 & \\text{si } A \\text{ es impar}, \\\\\n",
+    "12.0 & \\text{si } A \\text{ y } Z \\text{ son pares (ambos)}, \\\\\n",
+    "-12.0 & \\text{si } A \\text{ es par y } Z \\text{ impar}.\n",
+    "\\end{cases}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### a) Escribe un programa que tome como entrada los valores de \\( A \\) y \\( Z \\), e imprima la energía de enlace \\( B \\) para el átomo correspondiente. Usa tu programa para encontrar la energía de enlace de un átomo con \\( A = 58 \\) y \\( Z = 28 \\). (Hint: La respuesta correcta es alrededor de los 490 MeV)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el valor de masa A del átomo: 58\n",
+      "Ingrese el número atómico de del elemento: 28\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La energía de enlace del átomo con A y Z proporcionados es: 497.56 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=float(input(\"Ingrese el valor de masa A del átomo:\"))\n",
+    "Z=float(input(\"Ingrese el número atómico de del elemento:\"))\n",
+    "a1=15.8\n",
+    "a2=18.3\n",
+    "a3=0.714\n",
+    "a4=23.2\n",
+    "if A % 2 == 1:  # A impar\n",
+    "    a5 = 0\n",
+    "elif A % 2 == 0 and Z % 2 == 0:  # Ambos pares\n",
+    "    a5 = 12.0\n",
+    "elif A % 2 == 0 and Z % 2 == 1:  # A par y Z impar\n",
+    "    a5 = -12.0\n",
+    "B=a1*A-a2*A**(2/3)-a3*Z**2/A**(1/3)-a4*((A-2*Z)**2/A)+a5/A**(1/2)\n",
+    "print(f\"La energía de enlace del átomo con A y Z proporcionados es: {B:.2f} MeV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Modifica el programa del inciso anterior, para escribir una segunda versión que imprima no la energía de enlace total \\( B \\), sino la energía de unión por nucleón, que es \\( B / A \\).\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el valor de masa A del átomo: 58\n",
+      "Ingrese el número atómico de del elemento: 28\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La energía de enlace del átomo con A y Z proporcionados es: 497.56 MeV\n",
+      "La energía de unión por nucleón dado B y A es 8.58 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=float(input(\"Ingrese el valor de masa A del átomo:\"))\n",
+    "Z=float(input(\"Ingrese el número atómico de del elemento:\"))\n",
+    "a1=15.8\n",
+    "a2=18.3\n",
+    "a3=0.714\n",
+    "a4=23.2\n",
+    "if A % 2 == 1:  # A impar\n",
+    "    a5 = 0\n",
+    "elif A % 2 == 0 and Z % 2 == 0:  # Ambos pares\n",
+    "    a5 = 12.0\n",
+    "elif A % 2 == 0 and Z % 2 == 1:  # A par y Z impar\n",
+    "    a5 = -12.0\n",
+    "B=a1*A-a2*A**(2/3)-a3*Z**2/A**(1/3)-a4*((A-2*Z)**2/A)+a5/A**(1/2)\n",
+    "print(f\"La energía de enlace del átomo con A y Z proporcionados es: {B:.2f} MeV\")\n",
+    "EpN=B/A\n",
+    "print(f\"La energía de unión por nucleón dado B y A es {EpN:.2f} MeV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Escribe una tercera version del programa para que tome como entrada solo un valor del número atómico Z y luego pase por todos los valores de A desde A = Z hasta A = 3Z, para encontrar el que tiene la mayor energ ́ıa de enlace por nucleon. Este es el nucleo más estable con el número atómico dado. Haz que tu programa imprima el valor de A para este nucleo más estable y el valor de la energía de enlace por nucleon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el número atómico de del elemento: 28\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "El núcleo más estable para Z = 28 es A = 62\n",
+      "Energía de enlace por nucleón: 8.70 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z=int(input(\"Ingrese el número atómico de del elemento:\"))\n",
+    "a1=15.8\n",
+    "a2=18.3\n",
+    "a3=0.714\n",
+    "a4=23.2\n",
+    "Mejor_A=Z\n",
+    "Mejor_EnergiaN=0\n",
+    "def EnergiaEnlace(A,Z):\n",
+    "\n",
+    "    a1=15.8\n",
+    "    a2=18.3\n",
+    "    a3=0.714\n",
+    "    a4=23.2\n",
+    "    if A % 2 == 1:  # A impar\n",
+    "        a5 = 0\n",
+    "    elif A % 2 == 0 and Z % 2 == 0:  # Ambos pares\n",
+    "        a5 = 12.0\n",
+    "    elif A % 2 == 0 and Z % 2 == 1:  # A par y Z impar\n",
+    "        a5 = -12.0\n",
+    "    B=a1*A-a2*A**(2/3)-a3*Z**2/A**(1/3)-a4*((A-2*Z)**2/A)+a5/A**(1/2)\n",
+    "    return B\n",
+    "for A in range(Z,3*Z+1):\n",
+    "    B=EnergiaEnlace(A,Z)\n",
+    "    EnergiaNucleon=B/A\n",
+    "    if EnergiaNucleon > Mejor_EnergiaN:\n",
+    "        Mejor_EnergiaN=EnergiaNucleon\n",
+    "        Mejor_A=A\n",
+    "print(f\"\\nEl núcleo más estable para Z = {Z} es A = {Mejor_A}\")\n",
+    "print(f\"Energía de enlace por nucleón: {Mejor_EnergiaN:.2f} MeV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) Finalmente, escribe una cuarta version del programa que, en lugar de tomar  ́ Z como entrada, se ejecute a traves de todos los valores de  ́ Z de 1 a 100 e imprima el valor mas estable de  ́ A para cada uno. ¿A que valor de  ́ Z se produce la energ ́ıa de enlace maxima por nucle  ́ on? (La respuesta correcta, en la vida real, es  ́ Z = 28, que corresponde al N ́ıquel)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z =   1 | Mejor A =   3 | Energía por nucleón = 0.37 MeV\n",
+      "Z =   2 | Mejor A =   4 | Energía por nucleón = 5.32 MeV\n",
+      "Z =   3 | Mejor A =   7 | Energía por nucleón = 5.28 MeV\n",
+      "Z =   4 | Mejor A =   8 | Energía por nucleón = 6.47 MeV\n",
+      "Z =   5 | Mejor A =  11 | Energía por nucleón = 6.65 MeV\n",
+      "Z =   6 | Mejor A =  14 | Energía por nucleón = 7.20 MeV\n",
+      "Z =   7 | Mejor A =  15 | Energía por nucleón = 7.33 MeV\n",
+      "Z =   8 | Mejor A =  18 | Energía por nucleón = 7.72 MeV\n",
+      "Z =   9 | Mejor A =  19 | Energía por nucleón = 7.74 MeV\n",
+      "Z =  10 | Mejor A =  22 | Energía por nucleón = 8.04 MeV\n",
+      "Z =  11 | Mejor A =  25 | Energía por nucleón = 8.03 MeV\n",
+      "Z =  12 | Mejor A =  26 | Energía por nucleón = 8.24 MeV\n",
+      "Z =  13 | Mejor A =  29 | Energía por nucleón = 8.24 MeV\n",
+      "Z =  14 | Mejor A =  30 | Energía por nucleón = 8.38 MeV\n",
+      "Z =  15 | Mejor A =  33 | Energía por nucleón = 8.39 MeV\n",
+      "Z =  16 | Mejor A =  36 | Energía por nucleón = 8.49 MeV\n",
+      "Z =  17 | Mejor A =  37 | Energía por nucleón = 8.48 MeV\n",
+      "Z =  18 | Mejor A =  40 | Energía por nucleón = 8.57 MeV\n",
+      "Z =  19 | Mejor A =  43 | Energía por nucleón = 8.55 MeV\n",
+      "Z =  20 | Mejor A =  44 | Energía por nucleón = 8.63 MeV\n",
+      "Z =  21 | Mejor A =  47 | Energía por nucleón = 8.61 MeV\n",
+      "Z =  22 | Mejor A =  48 | Energía por nucleón = 8.66 MeV\n",
+      "Z =  23 | Mejor A =  51 | Energía por nucleón = 8.65 MeV\n",
+      "Z =  24 | Mejor A =  54 | Energía por nucleón = 8.69 MeV\n",
+      "Z =  25 | Mejor A =  55 | Energía por nucleón = 8.66 MeV\n",
+      "Z =  26 | Mejor A =  58 | Energía por nucleón = 8.70 MeV\n",
+      "Z =  27 | Mejor A =  61 | Energía por nucleón = 8.68 MeV\n",
+      "Z =  28 | Mejor A =  62 | Energía por nucleón = 8.70 MeV\n",
+      "Z =  29 | Mejor A =  65 | Energía por nucleón = 8.68 MeV\n",
+      "Z =  30 | Mejor A =  68 | Energía por nucleón = 8.70 MeV\n",
+      "Z =  31 | Mejor A =  69 | Energía por nucleón = 8.68 MeV\n",
+      "Z =  32 | Mejor A =  72 | Energía por nucleón = 8.69 MeV\n",
+      "Z =  33 | Mejor A =  75 | Energía por nucleón = 8.67 MeV\n",
+      "Z =  34 | Mejor A =  76 | Energía por nucleón = 8.68 MeV\n",
+      "Z =  35 | Mejor A =  79 | Energía por nucleón = 8.65 MeV\n",
+      "Z =  36 | Mejor A =  82 | Energía por nucleón = 8.66 MeV\n",
+      "Z =  37 | Mejor A =  85 | Energía por nucleón = 8.63 MeV\n",
+      "Z =  38 | Mejor A =  86 | Energía por nucleón = 8.64 MeV\n",
+      "Z =  39 | Mejor A =  89 | Energía por nucleón = 8.61 MeV\n",
+      "Z =  40 | Mejor A =  92 | Energía por nucleón = 8.61 MeV\n",
+      "Z =  41 | Mejor A =  93 | Energía por nucleón = 8.59 MeV\n",
+      "Z =  42 | Mejor A =  96 | Energía por nucleón = 8.59 MeV\n",
+      "Z =  43 | Mejor A =  99 | Energía por nucleón = 8.56 MeV\n",
+      "Z =  44 | Mejor A = 102 | Energía por nucleón = 8.56 MeV\n",
+      "Z =  45 | Mejor A = 103 | Energía por nucleón = 8.53 MeV\n",
+      "Z =  46 | Mejor A = 106 | Energía por nucleón = 8.53 MeV\n",
+      "Z =  47 | Mejor A = 109 | Energía por nucleón = 8.50 MeV\n",
+      "Z =  48 | Mejor A = 110 | Energía por nucleón = 8.49 MeV\n",
+      "Z =  49 | Mejor A = 113 | Energía por nucleón = 8.47 MeV\n",
+      "Z =  50 | Mejor A = 116 | Energía por nucleón = 8.46 MeV\n",
+      "Z =  51 | Mejor A = 119 | Energía por nucleón = 8.43 MeV\n",
+      "Z =  52 | Mejor A = 120 | Energía por nucleón = 8.42 MeV\n",
+      "Z =  53 | Mejor A = 123 | Energía por nucleón = 8.40 MeV\n",
+      "Z =  54 | Mejor A = 126 | Energía por nucleón = 8.39 MeV\n",
+      "Z =  55 | Mejor A = 129 | Energía por nucleón = 8.36 MeV\n",
+      "Z =  56 | Mejor A = 130 | Energía por nucleón = 8.35 MeV\n",
+      "Z =  57 | Mejor A = 133 | Energía por nucleón = 8.32 MeV\n",
+      "Z =  58 | Mejor A = 136 | Energía por nucleón = 8.31 MeV\n",
+      "Z =  59 | Mejor A = 139 | Energía por nucleón = 8.29 MeV\n",
+      "Z =  60 | Mejor A = 140 | Energía por nucleón = 8.27 MeV\n",
+      "Z =  61 | Mejor A = 143 | Energía por nucleón = 8.25 MeV\n",
+      "Z =  62 | Mejor A = 146 | Energía por nucleón = 8.23 MeV\n",
+      "Z =  63 | Mejor A = 149 | Energía por nucleón = 8.21 MeV\n",
+      "Z =  64 | Mejor A = 150 | Energía por nucleón = 8.19 MeV\n",
+      "Z =  65 | Mejor A = 153 | Energía por nucleón = 8.17 MeV\n",
+      "Z =  66 | Mejor A = 156 | Energía por nucleón = 8.15 MeV\n",
+      "Z =  67 | Mejor A = 159 | Energía por nucleón = 8.13 MeV\n",
+      "Z =  68 | Mejor A = 162 | Energía por nucleón = 8.11 MeV\n",
+      "Z =  69 | Mejor A = 163 | Energía por nucleón = 8.09 MeV\n",
+      "Z =  70 | Mejor A = 166 | Energía por nucleón = 8.07 MeV\n",
+      "Z =  71 | Mejor A = 169 | Energía por nucleón = 8.05 MeV\n",
+      "Z =  72 | Mejor A = 172 | Energía por nucleón = 8.03 MeV\n",
+      "Z =  73 | Mejor A = 175 | Energía por nucleón = 8.00 MeV\n",
+      "Z =  74 | Mejor A = 176 | Energía por nucleón = 7.99 MeV\n",
+      "Z =  75 | Mejor A = 179 | Energía por nucleón = 7.96 MeV\n",
+      "Z =  76 | Mejor A = 182 | Energía por nucleón = 7.95 MeV\n",
+      "Z =  77 | Mejor A = 185 | Energía por nucleón = 7.92 MeV\n",
+      "Z =  78 | Mejor A = 188 | Energía por nucleón = 7.90 MeV\n",
+      "Z =  79 | Mejor A = 191 | Energía por nucleón = 7.88 MeV\n",
+      "Z =  80 | Mejor A = 192 | Energía por nucleón = 7.86 MeV\n",
+      "Z =  81 | Mejor A = 195 | Energía por nucleón = 7.84 MeV\n",
+      "Z =  82 | Mejor A = 198 | Energía por nucleón = 7.82 MeV\n",
+      "Z =  83 | Mejor A = 201 | Energía por nucleón = 7.79 MeV\n",
+      "Z =  84 | Mejor A = 204 | Energía por nucleón = 7.78 MeV\n",
+      "Z =  85 | Mejor A = 205 | Energía por nucleón = 7.75 MeV\n",
+      "Z =  86 | Mejor A = 208 | Energía por nucleón = 7.74 MeV\n",
+      "Z =  87 | Mejor A = 211 | Energía por nucleón = 7.71 MeV\n",
+      "Z =  88 | Mejor A = 214 | Energía por nucleón = 7.69 MeV\n",
+      "Z =  89 | Mejor A = 217 | Energía por nucleón = 7.67 MeV\n",
+      "Z =  90 | Mejor A = 220 | Energía por nucleón = 7.65 MeV\n",
+      "Z =  91 | Mejor A = 223 | Energía por nucleón = 7.63 MeV\n",
+      "Z =  92 | Mejor A = 224 | Energía por nucleón = 7.61 MeV\n",
+      "Z =  93 | Mejor A = 227 | Energía por nucleón = 7.58 MeV\n",
+      "Z =  94 | Mejor A = 230 | Energía por nucleón = 7.57 MeV\n",
+      "Z =  95 | Mejor A = 233 | Energía por nucleón = 7.54 MeV\n",
+      "Z =  96 | Mejor A = 236 | Energía por nucleón = 7.52 MeV\n",
+      "Z =  97 | Mejor A = 239 | Energía por nucleón = 7.50 MeV\n",
+      "Z =  98 | Mejor A = 242 | Energía por nucleón = 7.48 MeV\n",
+      "Z =  99 | Mejor A = 243 | Energía por nucleón = 7.46 MeV\n",
+      "Z = 100 | Mejor A = 246 | Energía por nucleón = 7.44 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1=15.8\n",
+    "a2=18.3\n",
+    "a3=0.714\n",
+    "a4=23.2\n",
+    "def EnergiaEnlace(A,Z):\n",
+    "\n",
+    "    a1=15.8\n",
+    "    a2=18.3\n",
+    "    a3=0.714\n",
+    "    a4=23.2\n",
+    "    if A % 2 == 1:  # A impar\n",
+    "        a5 = 0\n",
+    "    elif A % 2 == 0 and Z % 2 == 0:  # Ambos pares\n",
+    "        a5 = 12.0\n",
+    "    elif A % 2 == 0 and Z % 2 == 1:  # A par y Z impar\n",
+    "        a5 = -12.0\n",
+    "    B=a1*A-a2*A**(2/3)-a3*Z**2/A**(1/3)-a4*((A-2*Z)**2/A)+a5/A**(1/2)\n",
+    "    return B\n",
+    "for Z in range (1, 101):\n",
+    "    Mejor_A=Z\n",
+    "    Mejor_EnergiaN=0\n",
+    "    for A in range(Z,Z*3+1):\n",
+    "        B=EnergiaEnlace(A,Z)\n",
+    "        EnergiaNucleon=B/A\n",
+    "        if EnergiaNucleon > Mejor_EnergiaN:\n",
+    "            Mejor_EnergiaN=EnergiaNucleon\n",
+    "            Mejor_A=A\n",
+    "    print(f\"Z = {Z:3} | Mejor A = {Mejor_A:3} | Energía por nucleón = {Mejor_EnergiaN:.2f} MeV\")"
    ]
   }
  ],
