Esto es un avance de la tarea

--- a/TareaPractica1_plantillaTareasPracticas.ipynb
+++ b/TareaPractica1_plantillaTareasPracticas.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,12 @@
       "Z =  97 | Mejor A = 239 | Energía por nucleón = 7.50 MeV\n",
       "Z =  98 | Mejor A = 242 | Energía por nucleón = 7.48 MeV\n",
       "Z =  99 | Mejor A = 243 | Energía por nucleón = 7.46 MeV\n",
-      "Z = 100 | Mejor A = 246 | Energía por nucleón = 7.44 MeV\n"
+      "Z = 100 | Mejor A = 246 | Energía por nucleón = 7.44 MeV\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "Z con mayor energía por nucleón: Z = 28\n",
+      "A más estable en ese Z: A = 62\n",
+      "Energía por nucleón máxima: 8.70 MeV\n"
      ]
     }
    ],
@@ -831,6 +836,9 @@
     "        a5 = -12.0\n",
     "    B=a1*A-a2*A**(2/3)-a3*Z**2/A**(1/3)-a4*((A-2*Z)**2/A)+a5/A**(1/2)\n",
     "    return B\n",
+    "Mejor_Z_Global = 0\n",
+    "Mejor_A_Global = 0\n",
+    "Mejor_Energia_Global = 0\n",
     "for Z in range (1, 101):\n",
     "    Mejor_A=Z\n",
     "    Mejor_EnergiaN=0\n",
@@ -840,7 +848,79 @@
     "        if EnergiaNucleon > Mejor_EnergiaN:\n",
     "            Mejor_EnergiaN=EnergiaNucleon\n",
     "            Mejor_A=A\n",
-    "    print(f\"Z = {Z:3} | Mejor A = {Mejor_A:3} | Energía por nucleón = {Mejor_EnergiaN:.2f} MeV\")"
+    "    print(f\"Z = {Z:3} | Mejor A = {Mejor_A:3} | Energía por nucleón = {Mejor_EnergiaN:.2f} MeV\")\n",
+    "     # Verificar si este Z tiene la mejor energía global\n",
+    "    if Mejor_EnergiaN > Mejor_Energia_Global:\n",
+    "        Mejor_Energia_Global = Mejor_EnergiaN\n",
+    "        Mejor_Z_Global = Z\n",
+    "        Mejor_A_Global = Mejor_A\n",
+    "\n",
+    "print(\"\\n\" + \"-\" * 60)\n",
+    "print(f\"Z con mayor energía por nucleón: Z = {Mejor_Z_Global}\")\n",
+    "print(f\"A más estable en ese Z: A = {Mejor_A_Global}\")\n",
+    "print(f\"Energía por nucleón máxima: {Mejor_Energia_Global:.2f} MeV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. La constante de Madelung  \n",
+    "En física de la materia condensada, la constante de Madelung da el potencial eléctrico  \n",
+    "total que siente un átomo en un sólido; y depende de las cargas de los otros átomos  \n",
+    "cercanos y de sus ubicaciones.  \n",
+    "Por ejemplo, el cristal de cloruro de sodio sólido (la sal de mesa), tiene átomos dispues-  \n",
+    "tos en una red cúbica, con átomos de sodio y cloro alternados, teniendo los de sodio  \n",
+    "una carga positiva $+e$ y los de cloro una negativa $-e$ (donde $e$ es la carga del electrón).  \n",
+    "\n",
+    "Si etiquetamos cada posición en la red con tres coordenadas enteras $(i, j, k)$, entonces  \n",
+    "los átomos de sodio caen en posiciones donde $i + j + k$ es par, y los átomos de cloro en  \n",
+    "posiciones donde $i + j + k$ es impar.  \n",
+    "Consideremos un átomo de sodio en el origen, i.e. $i = j = k = 0$, y calculemos la  \n",
+    "constante de Madelung. Si el espaciado de los átomos en la red es $a$, entonces la distancia  \n",
+    "desde el origen al átomo en la posición $(i, j, k)$ es:  \n",
+    "\n",
+    "$a \\sqrt{i^2 + j^2 + k^2}$  \n",
+    "\n",
+    "y el potencial en el origen creado por tal átomo es:  \n",
+    "\n",
+    "$V(i, j, k) = \\pm \\dfrac{e}{4\\pi\\varepsilon_0 a \\sqrt{i^2 + j^2 + k^2}}$  \n",
+    "\n",
+    "siendo $\\varepsilon_0$ la permitividad del vacío y el signo de la expresión se toma dependiendo de  \n",
+    "si $i + j + k$ es par o impar. Así entonces, el potencial total que siente el átomo de sodio  \n",
+    "es la suma de esta cantidad sobre todos los demás átomos. Supongamos una caja cú-  \n",
+    "bica alrededor del átomo de sodio en el origen, con $L$ átomos en todas las direcciones,  \n",
+    "entonces:  \n",
+    "\n",
+    "$V_{\\text{total}} = \\sum\\limits_{\\substack{i,j,k=-L \\\\ (i,j,k)\\ne (0,0,0)}}^{L} V(i, j, k) = \\dfrac{e}{4\\pi\\varepsilon_0 a} \\cdot M$  \n",
+    "\n",
+    "donde $M$ es la constante de Madelung (al menos aproximadamente).  \n",
+    "Técnicamente, la constante de Madelung es el valor de $M$ cuando $L \\to \\infty$, pero se  \n",
+    "puede obtener una buena aproximación simplemente usando un valor grande de $L$.  \n",
+    "Escribe un programa para calcular e imprimir la constante de Madelung para el cloruro  \n",
+    "de sodio. Utiliza un valor de $L$ tan grande como puedas, sin dejar que tu programa se  \n",
+    "ejecute en un tiempo razonable (un minuto o menos).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math as mt\n",
+    "L=int(input(\"Coloque un número L correspondiente a la distancia desde el origen (Como 10,20,30,etc.):\"))\n",
+    "M=0\n",
+    "for i in range(-L,L+1):\n",
+    "    for j in range(-L,L+1):\n",
+    "        for k in range(-L,L+1):\n",
+    "            if i==0 and j==0 and k==0:\n",
+    "                continue\n",
+    "            r=mt.sqrt(i**2+j**2+k**2)\n",
+    "            s=i+j+k\n",
+    "            signo=1 if (i+j+k) % 2==0 else -1\n",
+    "            M=M+signo/r\n",
+    "print(\"Según el L proporcionado la aproximación de la constante de Madelung será\", M)"
    ]
   }
  ],
