Esto es un avance de la tarea

--- a/TareaPractica1_plantillaTareasPracticas.ipynb
+++ b/TareaPractica1_plantillaTareasPracticas.ipynb
@@ -906,9 +906,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Coloque un número L correspondiente a la distancia desde el origen (Como 10,20,30,etc.): 100000\n"
+     ]
+    }
+   ],
    "source": [
     "import math as mt\n",
+    "import time\n",
+    "tiempo_maximo = 60\n",
+    "inicio = time.time()\n",
     "L=int(input(\"Coloque un número L correspondiente a la distancia desde el origen (Como 10,20,30,etc.):\"))\n",
     "M=0\n",
     "for i in range(-L,L+1):\n",
@@ -920,6 +931,10 @@
     "            s=i+j+k\n",
     "            signo=1 if (i+j+k) % 2==0 else -1\n",
     "            M=M+signo/r\n",
+    "            if time.time() - inicio > tiempo_maximo:\n",
+    "                print(f\"\\n⏱️ El cálculo superó el límite de 60 segundos para L = {L}.\")\n",
+    "                print(\"Prueba con un L más pequeño.\")\n",
+    "                exit()\n",
     "print(\"Según el L proporcionado la aproximación de la constante de Madelung será\", M)"
    ]
   }
